--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "buildGitHub": "ng build --output-path docs --base-href /typing-test/",
+    "publishBuild": "git commit -a -m \"add build\" && git push origin HEAD:deploy",
     "test": "ng test"
   },
   "private": true,
